chore(): add download template endpoint
